--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <header>
-    <h1><a href="/">Mini CMS</a></h1>
+    <h1><a href="/">Rejestracja</a></h1>
     <nav>
-        <a href="/">Artykuły</a><br>
-        <a href="/articles/new">Dodaj</a>
+        <a href="/">Użytkownicy</a><br>
+        <a href="/users/new">Utwórz konto</a>
     </nav>
 </header>
