--- a/src/views/users/error.ejs
+++ b/src/views/users/error.ejs
@@ -19,11 +19,11 @@
                 </ul>
 
                 <h2>Wprowawdzone dane:</h2>
-                <p>Tytuł: <%= values.title %></p>
-                <p>Autor: <%= values.author %></p>
-                <p>Treść: <%= values.content %></p>
+                <p>Nazwa użytkownika: <%= values.username %></p>
+                <p>Wiek: <%= values.age %></p>
+                <p>Hasło: <%= values.password %></p>
 
-                <a href="articles/new">Spróbuj ponownie</a>
+                <a href="users/new">Spróbuj ponownie</a>
             <% } else { %>
                 </ul>
                 <a href="new">Spróbuj ponownie</a>
