login & password hashing

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -3,5 +3,6 @@
     <nav>
         <a href="/">Użytkownicy</a><br>
         <a href="/users/new">Utwórz konto</a>
+        <a href="/users/login">Zaloguj się</a>
     </nav>
 </header>
