--- a/src/views/users/new.ejs
+++ b/src/views/users/new.ejs
@@ -32,6 +32,10 @@
                 <input type="number" id="age" name="age" value="<%= values.age %>" min="1" required>
             </div>
             <div>
+                <label for="mail">Adres e-mail:</label>
+                <input type="email" id="mail" name="mail" value="<%= values.mail %>" required>
+            </div>
+            <div>
                 <label for="password">Hasło:</label>
                 <input type="password" id="password" name="password" value="<%= values.password %>" required>
             </div>
