--- a/public/css/main.css
+++ b/public/css/main.css
@@ -36,14 +36,45 @@ header a{
     margin: 0 15px;
 }
 
+li a, article a, label{
+    font-size: 18px;
+    color: black;
+}
+
+
+article a{
+    text-decoration-thickness: 1.5px;
+}
+
 header nav a{
     font-size: 20px;
 }
 
-header a:hover{
+li a{
+    text-decoration: none;
+}
+
+header a:hover, li a:hover{
     text-decoration: underline;
+    text-decoration-thickness: 1.5px;
 }
 
 p {
+    font-weight: bold;
+    font-size: 18px;
+}
+
+input{
+    margin: 7px 0;
+}
+
+button{
+    font-size: 14px;
+    margin: 10px 0;
+    padding: 5px 15px;
+    background-color: #0066ff;
+    border-color: #0066ff;
+    border-radius: 12px;
+    color: white;
     font-weight: bold;
 }
